// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateFretboard generates a fretBoard 1`] = `
Array [
  Object {
    "fret": "E4",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F4",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Gb4",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G4",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Ab4",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A4",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#4",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B4",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C5",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Db5",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D5",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Eb5",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E5",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A3",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#3",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B3",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C4",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Db4",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D4",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D#4",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E4",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F4",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Gb4",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G4",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Ab4",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A4",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D3",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D#3",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E3",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F3",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Gb3",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G3",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G#3",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A3",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#3",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B3",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C4",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Db4",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D4",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G2",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G#2",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A2",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#2",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B2",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C3",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C#3",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D3",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D#3",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E3",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F3",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Gb3",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G3",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C2",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C#2",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D2",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D#2",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E2",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F2",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F#2",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G2",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G#2",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A2",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#2",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B2",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C3",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F1",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F#1",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G1",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G#1",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A1",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#1",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B1",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C2",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C#2",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D2",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D#2",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E2",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F2",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
]
`;

exports[`generateString generates A3 string 1`] = `
Array [
  "A3",
  "A#3",
  "B3",
  "C4",
  "Db4",
  "D4",
  "D#4",
  "E4",
  "F4",
  "Gb4",
  "G4",
  "Ab4",
  "A4",
]
`;

exports[`generateString generates E4 string 1`] = `
Array [
  "E4",
  "F4",
  "Gb4",
  "G4",
  "Ab4",
  "A4",
  "A#4",
  "B4",
  "C5",
  "Db5",
  "D5",
  "Eb5",
  "E5",
]
`;

exports[`generateString generates a 10 P5 StringsFlatNote 1`] = `
Array [
  "G#6",
  "C#6",
  "F#5",
  "B4",
  "E4",
  "A3",
  "D3",
  "G2",
  "C2",
  "F1",
]
`;

exports[`generateString generates a P5 StringsFlatNote 1`] = `
Array [
  "E4",
  "A3",
  "D3",
  "G2",
  "C2",
  "F1",
]
`;

exports[`setChordIntervals sets the tonic 1`] = `
Array [
  Object {
    "fret": "E4",
    "fretIndex": 0,
    "selectedChordInterval": "1P",
  },
  Object {
    "fret": "F4",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Gb4",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G4",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Ab4",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A4",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#4",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B4",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C5",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Db5",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D5",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Eb5",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E5",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A3",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#3",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B3",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C4",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Db4",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D4",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D#4",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E4",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F4",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Gb4",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G4",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Ab4",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A4",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D3",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D#3",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E3",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F3",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Gb3",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G3",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G#3",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A3",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#3",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B3",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C4",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Db4",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D4",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G2",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G#2",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A2",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#2",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B2",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C3",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C#3",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D3",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D#3",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E3",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F3",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "Gb3",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G3",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C2",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C#2",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D2",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D#2",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E2",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F2",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F#2",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G2",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G#2",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A2",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#2",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B2",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C3",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F1",
    "fretIndex": 0,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F#1",
    "fretIndex": 1,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G1",
    "fretIndex": 2,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "G#1",
    "fretIndex": 3,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A1",
    "fretIndex": 4,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "A#1",
    "fretIndex": 5,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "B1",
    "fretIndex": 6,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C2",
    "fretIndex": 7,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "C#2",
    "fretIndex": 8,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D2",
    "fretIndex": 9,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "D#2",
    "fretIndex": 10,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "E2",
    "fretIndex": 11,
    "selectedChordInterval": "",
  },
  Object {
    "fret": "F2",
    "fretIndex": 12,
    "selectedChordInterval": "",
  },
]
`;
